--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 asgiref==3.5.0
+aspy.refactor-imports==3.0.1
 astor==0.8.1
 attrs==21.4.0
+autoflake==1.4
 autopep8==1.6.0
 bandit==1.7.4
+black==22.6.0
+click==8.1.3
 darglint==1.8.1
 Django==3.2
 django-debug-toolbar==3.2.4
@@ -21,6 +25,7 @@ flake8-docstrings==1.6.0
 flake8-eradicate==1.2.0
 flake8-isort==4.1.1
 flake8-polyfill==1.0.2
+Flake8-pyproject==0.9.0
 flake8-quotes==3.3.1
 flake8-rst-docstrings==0.2.5
 flake8-string-format==0.3.0
@@ -29,9 +34,12 @@ GitPython==3.1.27
 iniconfig==1.1.1
 isort==5.10.1
 mccabe==0.6.1
+mypy-extensions==0.4.3
 packaging==21.3
+pathspec==0.9.0
 pbr==5.8.1
 pep8-naming==0.12.1
+platformdirs==2.5.2
 pluggy==1.0.0
 psycopg2-binary==2.9
 py==1.11.0
@@ -47,6 +55,7 @@ python-dotenv==0.20.0
 pytz==2022.1
 PyYAML==6.0
 restructuredtext-lint==1.4.0
+seed-isort-config==2.2.0
 six==1.16.0
 smmap==5.0.0
 snowballstemmer==2.2.0
